fix topbar jumping at more widths

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.81
+@version     1.0.82
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/new-vector-enhanced.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -65,8 +65,12 @@ body.skin-vector-2022 { */
 }
 
 /* smaller ULS icon and text on multilingual wikis */
-.uls-trigger > span {
-  font-size: 0.6em;
+.uls-trigger > span:not(.mw-ui-icon-wikimedia-language) {
+  font-size: 0.8em;
+  max-width: 3px !important;
+}
+.uls-trigger {
+  padding-left: 2px !important;
 }
 .mw-ui-icon-wikimedia-language {
   background-size: 12px;
@@ -737,8 +741,10 @@ padding-right: 2px;
 }
 
 /* Reduce gap beside searchbox */
-#p-search {
+.vector-typeahead-search-container {
   margin-left: 0;
+  margin-right: 2px!important;
+  max-width: 25vw !important;
 }
 .vector-search-box .cdx-typeahead-search--show-thumbnail.cdx-typeahead-search--auto-expand-width:not(.cdx-typeahead-search--expanded) {
   margin-left: 0;
